@@ -9,16 +9,15 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
-public class Exercise1Test extends PetDomainForKata
-{
+public class Exercise1Test extends PetDomainForKata {
     @Test
     @Tag("KATA")
-    public void getFirstNamesOfAllPeople()
-    {
+    public void getFirstNamesOfAllPeople() {
         //TODO
         // Replace empty list firstNames with a stream transformation on people.
-        List<String> firstNames =this.people.stream().map(person -> person.getFirstName()).toList(); // this.people...
+        List<String> firstNames = this.people.stream().map(Person::getFirstName).collect(Collectors.toList()); // this.people...
 
         var expectedFirstNames = Arrays.asList("Mary", "Bob", "Ted", "Jake", "Barry", "Terry", "Harry", "John");
         Assertions.assertIterableEquals(expectedFirstNames, firstNames);
@@ -26,8 +25,7 @@ public class Exercise1Test extends PetDomainForKata
 
     @Test
     @Tag("KATA")
-    public void getNamesOfMarySmithsPets()
-    {
+    public void getNamesOfMarySmithsPets() {
         Optional<Person> optionalPerson = this.getPersonNamed("Mary Smith");
         List<String> names = new ArrayList<>();
         if (optionalPerson.isPresent()) {
@@ -35,7 +33,7 @@ public class Exercise1Test extends PetDomainForKata
 
             //TODO
             // Replace empty list name with a stream transformation on pets.
-            names = pets.stream().map(pet -> pet.getName()).toList();
+            names = pets.stream().map(Pet::getName).toList();
 
         }
 
@@ -45,31 +43,25 @@ public class Exercise1Test extends PetDomainForKata
     @Test
     @Tag("KATA")
     @DisplayName("getPeopleWithCats 🐱")
-    public void getPeopleWithCats()
-    {
+    public void getPeopleWithCats() {
         //TODO
         // Replace empty list with a positive filtering stream on people
-        List<Person> peopleWithCats = this.people.stream()
-                .filter(person -> person.hasPet(PetType.CAT))
-                .toList();  // this.people...
+        List<Person> peopleWithCats = this.people.stream().filter(person -> person.hasPet("🐱")).toList();  // this.people...
 
         var expectedFirstNames = Arrays.asList("Smith", "Smith");
 
-        Assertions.assertEquals(expectedFirstNames, peopleWithCats.stream().map(person -> person.getLastName()).toList());
+        Assertions.assertEquals(expectedFirstNames, peopleWithCats.stream().map(Person::getFirstName).toList());
     }
 
     @Test
     @Tag("KATA")
     @DisplayName("getPeopleWithoutCats 🐱")
-    public void getPeopleWithoutCats()
-    {
+    public void getPeopleWithoutCats() {
         //TODO
         // Replace empty list with a negative filtering stream on people
-        List<Person> peopleWithoutCats = this.people.stream()
-                .filter(person -> !person.hasPet(PetType.CAT))
-                .toList();  // this.people...
+        List<Person> peopleWithoutCats = this.people.stream().filter(person -> !person.hasPet("🐱")).collect(Collectors.toList());  // this.people...
 
         var expectedFirstNames = Arrays.asList("Smith", "Snake", "Bird", "Turtle", "Hamster", "Doe");
-        Assertions.assertIterableEquals(expectedFirstNames, peopleWithoutCats.stream().map(person -> person.getLastName()).toList());
+        Assertions.assertIterableEquals(expectedFirstNames, peopleWithoutCats.stream().map(Person::getLastName).toList());
     }
 }
